--- a/src/views/Layout/index.scss
+++ b/src/views/Layout/index.scss
@@ -7,6 +7,39 @@
   width: 60px;
   height: 100%;
   background: #2c333c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.avatarWrapper{
+  background-color: #f2b81c;
+  vertical-align: middle;
+  margin: 15px 0;
+}
+.avatarText{
+  font-weight: 700;
+  font-size: 24px;
+  text-shadow: 1px 0 1px #795c19;;
+}
+.menuItem{
+  width: 100%;
+  height: 50px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.iconfont{
+  font-size: 24px;
+}
+
+.logoutButton{
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .rightContent{
