完成笔记详情页侧边栏

--- a/src/views/NoteDetail/index.scss
+++ b/src/views/NoteDetail/index.scss
@@ -1,6 +1,71 @@
+.ant-select-selection-placeholder{
+  color: black!important;
+}
 .NoteDetailWrapper{
   width: 100%;
   height: 100%;
   display: flex;
-  background: peachpuff;
+}
+.noteSideBar{
+  width: 300px;
+  height: 100%;
+  background-color: #eeeeee;
+  border-right: 1px solid #cccccc;
+  display: flex;
+  flex-direction: column;
+}
+.headerWrapper{
+  background-color: #f7f7f7;
+  height: 50px;
+  border-bottom: 1px solid #cccccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.addNoteButton{
+  position: absolute;
+  right: 15px;
+}
+.noteListWrapper{
+  width: 100%;
+  flex: 1;
+  overflow:auto;
+}
+.noteListHead{
+  width: 100%;
+  font-size: 15px;
+  display: flex;
+  border-bottom: 1px solid #cccccc;
+  >div{
+    width: 50%;
+    line-height: 24px;
+    padding-left: 10px;
+  }
+  >div:nth-child(1){
+    border-right: 1px solid #cccccc;
+  }
+}
+.noteItem{
+  width: calc(100% - 4px);
+  font-size: 13px;
+  display: flex;
+  color: #444;
+  border: 2px solid transparent;
+  cursor: pointer;
+  >div{
+    width: 50%;
+    line-height: 24px;
+    padding-left: 10px;
+  }
+  &:nth-of-type(even){
+    background-color: #f2f2f2;
+  }
+  &:nth-of-type(odd){
+    background-color: #eeeeee;
+  }
+}
+
+.selectedNoteItem{
+  border: 2px solid #81c0f3;;
 }
