--- a/src/views/NoteDetail/index.scss
+++ b/src/views/NoteDetail/index.scss
@@ -29,7 +29,7 @@
 }
 .noteListWrapper{
   width: 100%;
-  flex: 1;
+  height: calc(100% - 50px);
   overflow:auto;
 }
 .noteListHead{
@@ -68,4 +68,50 @@
 
 .selectedNoteItem{
   border: 2px solid #81c0f3;;
+}
+.noteDetailWrapper{
+  width: calc(100% - 300px);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.noteDetailHead{
+  height: 32px;
+  width: calc(100% - 40px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  border-bottom: 1px solid #eeeeee;
+  color: #999999;
+  font-size: 14px;
+}
+.noteInfo{
+  display: flex;
+  >div{
+    margin-right: 20px;
+  }
+}
+
+.noteButton{
+  >i{
+    margin-right: 10px;
+    cursor: pointer;
+  }
+  >i:nth-child(2){
+    color: red;
+  }
+}
+.noteDetailContent{
+  width: 100%;
+  height: calc(100% - 32px);
+  display: flex;
+  flex-direction: column;
+}
+.noteTitle{
+  height: 52px;
+}
+.noteMainContent{
+  height: calc(100% - 52px);
+  overflow: auto;
 }
