完成笔记本列表页样式

--- a/src/views/NoteBookList/index.scss
+++ b/src/views/NoteBookList/index.scss
@@ -2,5 +2,85 @@
   width: 100%;
   height: 100%;
   display: flex;
-  background: palegreen;
+  background-color: #eeeeee;
+  flex-direction: column;
+}
+
+.headerWrapper{
+  height: 48px;
+  width: calc(100% - 20px);
+  border-bottom: 1px solid #ccc;
+  background-color: #eeeeee;
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 20px;
+}
+
+.noteBookListContainer{
+  width: 100%;
+  height: calc(100% - 48px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  >div:nth-child(1){
+    height: 18px;
+    font-size: 14px;
+    font-weight: 700;
+    width: 70%;
+    margin-top: 30px;
+  }
+}
+
+.noteBookListContent{
+  width: 70%;
+  height: calc(100% - 70px);
+  margin: 10px 0;
+  overflow: auto;
+
+  >div:nth-child(1){
+    border-radius: 5px 5px 0 0 ;
+  }
+  >div:nth-last-child(1){
+    border-bottom: none;
+    border-radius: 0 0 5px 5px;
+  }
+}
+
+.noteBookItem{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 42px;
+  background-color: white;
+  border-bottom: 1px solid #ebebeb;
+  padding: 0 10px;
+  cursor: pointer;
+  &:hover{
+    background-color: #f7fafd;
+  }
+}
+
+.actionButton{
+  display: flex;
+  font-size: 12px;
+  font-weight: 650;
+  color: #b3c0c8;
+
+  >div:nth-child(2){
+    margin: 0 10px;
+  }
+}
+
+.noteBookTitle{
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 700;
+  color: #444444;
+  >i{
+    margin-right: 10px;
+    color: #bac1c8;
+    font-size: 12px;
+  }
 }
