--- a/src/views/NoteBookList/index.scss
+++ b/src/views/NoteBookList/index.scss
@@ -6,13 +6,14 @@
   flex-direction: column;
 }
 
-.headerWrapper{
+.NoteBookHeaderWrapper{
   height: 48px;
   width: calc(100% - 20px);
   border-bottom: 1px solid #ccc;
   background-color: #eeeeee;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   padding-left: 20px;
 }
 
