--- a/src/views/NoteDetail/index.scss
+++ b/src/views/NoteDetail/index.scss
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
 }
-.headerWrapper{
+.noteHeaderWrapper{
   background-color: #f7f7f7;
   height: 50px;
   border-bottom: 1px solid #cccccc;
